gcc/testsuite/rust/rustc/ui/type/type-check/unknown_type_for_closure.rs
fn main() {
    let x = |_| {    }; // { dg-error ".E0282." "" { target *-*-* } }
}

